--- a/xss/production/test/animtest.html
+++ b/xss/production/test/animtest.html
@@ -77,7 +77,7 @@ function start(resolution)
 	}    
 	window.setTimeout(updater, resolution);  
 }  
-var lbl1;var lbl2;var lbl3;var btn1;var btn2;var btn3;var anim1;var anim2;var anim3;
+var lbl1;var lbl2;var lbl3;var lbl4;var btn1;var btn2;var btn3;var btn4;var anim1;var anim2;var anim3;var anim4;
             application.click_count = 0;
 window.onload = function() 
 {
@@ -132,12 +132,20 @@ window.onload = function()
             lbl3.set_y(50);
             lbl3.set_width(140);
             lbl3.set_height(35);
+		    lbl4 = new ms.ui.Label( 
+	    null,g_ui_root.manager, g_ui_root);
+        lbl4 = lbl4;
+            lbl4.text("Button 4 Waiting For Click...");
+            lbl4.set_x(10);
+            lbl4.set_y(70);
+            lbl4.set_width(140);
+            lbl4.set_height(35);
 		    btn1 = new ms.ui.Image( 
 	    "images/img1.png",g_ui_root.manager, g_ui_root);
         btn1 = btn1;
             btn1.set_x(40);
             btn1.set_y(110);
-            btn1.set_width(100);
+            btn1.set_width(43);
             btn1.set_height(43);
 	var ev_parent = this;
 	btn1.events.addListener("click", function()
@@ -151,8 +159,8 @@ window.onload = function()
         btn2 = btn2;
             btn2.set_x(40);
             btn2.set_y(160);
-            btn2.set_width(100);
-            btn2.set_height(45);
+            btn2.set_width(43);
+            btn2.set_height(43);
 	var ev_parent = this;
 	btn2.events.addListener("click", function()
 	{    
@@ -165,8 +173,8 @@ window.onload = function()
         btn3 = btn3;
             btn3.set_x(40);
             btn3.set_y(210);
-            btn3.set_width(100);
-            btn3.set_height(47);
+            btn3.set_width(43);
+            btn3.set_height(43);
 	var ev_parent = this;
 	btn3.events.addListener("click", function()
 	{    
@@ -179,6 +187,13 @@ anim3.start();
 	}
 	);
 		application.are_obj_events = true;
+		    btn4 = new ms.ui.Image( 
+	    "images/img1.png",g_ui_root.manager, g_ui_root);
+        btn4 = btn4;
+            btn4.set_x(40);
+            btn4.set_y(260);
+            btn4.set_width(43);
+            btn4.set_height(43);
 anim1 =
 new ms.state.Sequence(
 g_sequence_manager);
@@ -197,7 +212,6 @@ anim2.start();
 	}
 	);
 		application.are_obj_events = true;
-            anim1.parent_sequence = null;
                     var ____i1 = new ms.state.Interpolator(
                         default_interpolate,
                         function(value)
@@ -226,7 +240,6 @@ g_sequence_manager);
 	}
 	);
 		application.are_obj_events = true;
-            anim2.parent_sequence = null;
                     var ____i2 = new ms.state.Interpolator(
                         default_interpolate,
                         function(value)
@@ -253,7 +266,6 @@ g_sequence_manager);
 anim3.stop();
 	};
                 anim3.start();
-            anim3.parent_sequence = null;
                     var ____i3 = new ms.state.Interpolator(
                         default_interpolate,
                         function(value)
@@ -280,9 +292,53 @@ anim3.stop();
                 {
                     if (application.click_count == 3)
                     {
-                        anim3.stop_anim3();
+                anim3.stop_anim3();
                     }
                 });
+anim4 =
+new ms.state.Sequence(
+g_sequence_manager);
+            anim4.nested = null;
+                anim4.start();
+            anim4.nested =
+new ms.state.Sequence(
+g_sequence_manager);
+ anim4.nested.parent_sequence = true; 
+                    var ____i5 = new ms.state.Interpolator(
+                        default_interpolate,
+                        function(value)
+                        {
+                            btn4.set_x(value);
+                        },
+                        [
+                        {t: 0, value: 40},
+                        {t: 1.5, value: 200},
+                        ]);
+                        anim4.nested.addHandler(____i5);	              
+                    var ____i6 = new ms.state.Interpolator(
+                        default_interpolate,
+                        function(value)
+                        {
+                            btn4.set_x(value);
+                        },
+                        [
+                        {t: 1.5, value: 200},
+                        {t: 3, value: 40},
+                        ]);
+                        anim4.nested.addHandler(____i6);	              
+                var ____sh1 = new ms.state.SequenceHandler(anim4.nested);
+                anim4.addHandler(____sh1);						  
+                if (btn4.events)
+                {
+                    btn4.events.addListener("click", function()
+                    {
+                        if (anim4.running)
+                        {
+                anim4.nested.start();
+                lbl4.text("Clicked!");
+                        }
+                    });
+               }
 			document.onkeydown = function(ev)
 			{
 				ui.keydown(ev.keyCode);                  
